--- a/assets/login.css
+++ b/assets/login.css
@@ -16,7 +16,7 @@ body {
     display: flex; /* Centraliza o conteúdo usando flexbox */
     justify-content: center;
     align-items: center;
-    background: #188c406e; /* Cor de fundo azul translúcida */
+    background: #FFFDF5; /* Cor de fundo azul translúcida */
 }
 
 /* Container principal que envolve imagem e formulário */
@@ -33,7 +33,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #a8f3adbc; /* Cor bege clara com transparência */
+    background-color: #E2DBD0; /* Cor bege clara com transparência */
     padding: 1rem;
 }
 
@@ -68,7 +68,7 @@ body {
 
 .login-button button {
     border: none;
-    background-color: #086015f9; /* Cor azul */
+    background-color: #628B35; /* Cor azul */
     padding: 0.4rem 1rem;
     border-radius: 5px;
     cursor: pointer;
@@ -76,7 +76,7 @@ body {
 
 /* Efeito de hover no botão */
 .login-button button:hover {
-    background-color: #086d1791; /* Azul mais escuro/transparente ao passar o mouse */
+    background-color: #4c6a23; /* Azul mais escuro/transparente ao passar o mouse */
 }
 
 /* Link dentro do botão */
@@ -92,7 +92,7 @@ body {
     display: block;
     width: 5rem;
     height: 0.3rem;
-    background-color: #63ff6b; /* Verde neon */
+    background-color: #628B35; /* Verde neon */
     margin: 0 auto;
     position: absolute;
     border-radius: 10px;
@@ -130,7 +130,7 @@ body {
 
 /* Borda azul clara quando o campo está em foco */
 .input-box input:focus-visible {
-    outline: 1px solid #63f5ff;
+    outline: 1px solid #628B35;
 }
 
 /* Estilização dos textos dos rótulos */
@@ -176,7 +176,7 @@ body {
     width: 100%;
     margin-top: 2.5rem;
     border: none;
-    background-color: #2e6b37f4;
+    background-color: #628B35;
     padding: 0.62rem;
     border-radius: 5px;
     cursor: pointer;
@@ -185,7 +185,7 @@ body {
 
 /* Efeito ao passar o mouse no botão */
 .continue-button button:hover {
-    background-color: #093f11eb;
+    background-color: #4c6a23;
 }
 
 /* Estilo do link dentro do botão */
@@ -196,18 +196,23 @@ body {
     color: #fff;
 }
 
+.registro-bnt-hover:hover {
+    color: #4c6a23;
+}
+
 a{
     text-decoration: none;
     width: 100%;
     margin-top: 2.5rem;
     border: none;
-    background-color: #2e6b37f4;
+    background-color: #628B35;
     padding: 0.62rem;
     border-radius: 5px;
     cursor: pointer;
     color: white;
     text-align: center;
 }
+
 a:hover{
     color: white;
 }
