--- a/src/pages/citizen/citizen.css
+++ b/src/pages/citizen/citizen.css
@@ -85,6 +85,34 @@ header > div {
   font-size: 1.2rem;
 }
 
+.status {
+  padding: 0.3rem 0.6rem;
+  border-radius: 12px;
+  font-size: 0.75rem;
+  text-align: center;
+  width: 80px;
+  font-weight: bold;
+  color: white; /* padrão branco para a maioria */
+}
+
+.status.scheduled {
+  background-color: #f1c40f; /* amarelo */
+  color: black;              /* texto preto */
+}
+
+.status.canceled {
+  background-color: #e74c3c; /* vermelho */
+}
+
+.status.completed {
+  background-color: #1abc9c; /* verde */
+}
+
+.status.not_completed {
+  background-color: #e67e22; /* laranja escuro */
+}
+
+
 table {
   width: 100%;
   border-collapse: collapse;
